# super_material

./: .buildinfo  .gitignore  LICENSE.md  README.md  TODO.md  bibliography.html  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: bibliography.doctree  environment.pickle  index.doctree
.doctrees/api/: index.doctree
.doctrees/dev/: index.doctree  release_checklist.doctree
.doctrees/examples/: bcs_gap_energy.doctree  index.doctree  superconductor_conductivity_comparison.doctree  zimmermann_impurity_comparison.doctree
_sources/: index.rst.txt
_sources/api/: index.rst.txt
_sources/dev/: release_checklist.rst.txt
_sources/examples/: bcs_gap_energy.rst.txt  index.rst.txt  superconductor_conductivity_comparison.rst.txt
api/: index.html
api/gap_energy/: bcs_gap_energy.html  index.html
api/superconductor_conductivity/: index.html  mattis_bardeen.html  zimmermann.html
dev/: index.html  release_checklist.html
docs/: api.md  bibliography.bib  bibliography.rst  conf.py  examples.md  index.rst  release_checklist.md
docs/dev/: index.rst  release_checklist.rst
docs/examples/: zimmermann_impurity_comparison.rst
examples/: bcs_gap_energy.html  bcs_gap_energy.py  compare_superconductor_conductivity.py  index.html  mattis_bardeen_complex_conductivity_plot.py  superconductor_conductivity_comparison.html  superconductor_conductivity_comparison.py  zimmerman_superconductor_conductivity.py  zimmermann_impurity_comparison.html  zimmermann_impurity_comparison.py
material/: cache.py  constants.py
profile/: bcs_gap_energy.py  mattis_bardeen_complex_conductivity.py  mattis_bardeen_superconductor_conductivity.py  zimmermann_superconductor_conductivity.py
scripts/: build.sh  build_docs.sh  clean_docs.sh  format.sh  install_dev.sh  populate_github_pages.sh  test.sh
super_material/: __init__.py
tests/: test_material.py
tools/: mattis_bardeen_complex_conductivity_plot.py
(+65 files in other folders)
