[tool.poetry]
name = "material"
version = "0.1.0"
description = ""
authors = ["Paul le Roux <pleroux0@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"
scipy = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jedi = "^0.17.2"
pylint = "^2.5.3"
black = "^19.10b0"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
