[tool.poetry]
name = "super_material"
version = "1.0.0a"
description = "Providing a constant interface to superconductor conductivity computations"
license = "BSD-2-Clause"
authors = ["Paul le Roux <pleroux0@outlook.com>"]
readme = "README.md"
repository = "https://github.com/pleroux0/super_material"
documentation = "https://pleroux0.github.io/super_material/"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"
scipy = "^1.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jedi = "^0.17.2"
pylint = "^2.5.3"
black = "^19.10b0"
rope = "^0.17.0"
matplotlib = "^3.3.1"
sympy = "^1.6.2"
sphinxcontrib-bibtex = "^1.0.0"
sphinx = "^3.2.1"
ghp_import = "^1.0.0"
sphinx_rtd_theme = "^0.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
